# azure-iot-sdk-c

iothub_client/devdoc/requirement_docs/: iothubtransport_amqp_common_requirements.md  iothubtransport_amqp_twin_messenger_requirements.md
iothub_client/inc/: iothubtransport_amqp_twin_messenger.h  iothubtransport_generic_amqp_messenger.h
iothub_client/samples/iothub_client_sample_mqtt/: iothub_client_sample_mqtt.c
iothub_client/src/: iothubtransport_amqp_twin_messenger.c  iothubtransport_generic_amqp_messenger.c
iothub_client/tests/iothubmessage_ut/: iothubmessage_ut.c
iothub_client/tests/iothubtransporthttp_ut/: iothubtransporthttp_ut.c
serializer/samples/devicemethod_simplesample/: CMakeLists.txt
serializer/samples/devicetwin_simplesample/: devicetwin_simplesample.c
serializer/tests/jsonencoder_ut/: jsonencoder_ut.cpp
